src/objects/GSS_Subscription_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Monthly_Option__c</fullName>
        <label>Calendar Monthly Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendar_New_Submission_Effective_Date__c</fullName>
        <label>Calendar New Submission Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calendar_Next_Submission_Date__c</fullName>
        <label>Calendar Next Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calendar_Semi_Monthly_First_Option__c</fullName>
        <description>Date of the file delivery for the first half of the month.</description>
        <label>Calendar Semi-Monthly First Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendar_Semi_Monthly_Second_Option__c</fullName>
        <description>Date of the file delivery for the second half of the month.</description>
        <label>Calendar Semi-Monthly Second Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendar_Weekly_Option__c</fullName>
        <label>Calendar Weekly Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileRecipent_iiNet_TDF_Recipient__c</fullName>
        <formula>LEFT(Zuora_Subscription__r.Zuora__CustomerAccount__r.IINETUserID__c,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Recipent iiNet TDF Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileRecipientEmail__c</fullName>
        <label>File Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FileRecipientFirstName__c</fullName>
        <label>File Recipient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileRecipientJobTitle__c</fullName>
        <label>File Recipient Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileRecipientLastName__c</fullName>
        <label>File Recipient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileRecipientPhone__c</fullName>
        <label>File Recipient Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileRecipientSalutation__c</fullName>
        <label>File Recipient Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name_Applies_on__c</fullName>
        <label>File Name Applies on</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zip file only</fullName>
                </value>
                <value>
                    <fullName>Zip file and Data file</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name_Custom_Prefix__c</fullName>
        <label>File Name Custom Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_Custom_Suffix__c</fullName>
        <label>File Name Custom Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_Prefix_Option__c</fullName>
        <label>File Name Prefix Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name_Suffix_Option__c</fullName>
        <label>File Name Suffix Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDP_File_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GDP File Description</label>
        <referenceTo>GDP_File_Description__c</referenceTo>
        <relationshipName>GSS_Subscription_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_File_Delivery__c</fullName>
        <description>Master File Delivery Date each time the Master File needs to be sent</description>
        <inlineHelpText>Master File Delivery Date each time the Master File needs to be sent</inlineHelpText>
        <label>Master File Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Master_File_Delivery__c</fullName>
        <description>Calculated at the Delivery Time Plus 12 Months after each Delivery of the Master File</description>
        <inlineHelpText>Calculated at the Delivery Time Plus 12 Months after each Delivery of the Master File</inlineHelpText>
        <label>Next Master File Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trigger_File_Name__c</fullName>
        <label>Trigger File Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipName>GSS_Subscription_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>File Subscription Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zuora_Subscription__c</columns>
        <columns>FileRecipent_iiNet_TDF_Recipient__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Calendar_Semi_Monthly_First_Option__c</columns>
        <columns>Calendar_Monthly_Option__c</columns>
        <columns>Calendar_Weekly_Option__c</columns>
        <columns>FileRecipientEmail__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>00-All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_By_Sabrina</fullName>
        <columns>NAME</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>FileRecipientEmail__c</columns>
        <columns>Calendar_Semi_Monthly_First_Option__c</columns>
        <columns>Calendar_Monthly_Option__c</columns>
        <columns>Calendar_Weekly_Option__c</columns>
        <columns>Zuora_Subscription__c</columns>
        <columns>File_Name_Custom_Prefix__c</columns>
        <columns>File_Name_Custom_Suffix__c</columns>
        <columns>File_Name_Prefix_Option__c</columns>
        <columns>File_Name_Suffix_Option__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>A-S00013941</value>
        </filters>
        <label>01-Search by Subscription Number</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>File_Sub_Details_Wo_Z_Sub</fullName>
        <columns>NAME</columns>
        <columns>Zuora_Subscription__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>FileRecipent_iiNet_TDF_Recipient__c</columns>
        <columns>Calendar_Monthly_Option__c</columns>
        <columns>Calendar_Next_Submission_Date__c</columns>
        <columns>Calendar_New_Submission_Effective_Date__c</columns>
        <columns>FileRecipientEmail__c</columns>
        <columns>FileRecipientSalutation__c</columns>
        <columns>FileRecipientFirstName__c</columns>
        <columns>FileRecipientLastName__c</columns>
        <columns>FileRecipientJobTitle__c</columns>
        <columns>FileRecipientPhone__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zuora_Subscription__c</field>
            <operation>equals</operation>
        </filters>
        <label>02-File Sub Details WHERE Z Sub = BLANK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MDP_Subscriptions</fullName>
        <columns>NAME</columns>
        <columns>Zuora_Subscription__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>FileRecipent_iiNet_TDF_Recipient__c</columns>
        <columns>Calendar_Monthly_Option__c</columns>
        <columns>Calendar_Next_Submission_Date__c</columns>
        <columns>Calendar_New_Submission_Effective_Date__c</columns>
        <columns>FileRecipientEmail__c</columns>
        <columns>FileRecipientSalutation__c</columns>
        <columns>FileRecipientFirstName__c</columns>
        <columns>FileRecipientLastName__c</columns>
        <columns>FileRecipientJobTitle__c</columns>
        <columns>FileRecipientPhone__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GDP_File_Description__c</field>
            <operation>contains</operation>
            <value>MDP</value>
        </filters>
        <label>03-MDP File Subscription Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X04_GSS_WEEKLY_File_Subscription_Details</fullName>
        <columns>NAME</columns>
        <columns>Zuora_Subscription__c</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>Calendar_Weekly_Option__c</columns>
        <columns>FileRecipent_iiNet_TDF_Recipient__c</columns>
        <columns>Calendar_Next_Submission_Date__c</columns>
        <columns>Calendar_New_Submission_Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GDP_File_Description__c</field>
            <operation>contains</operation>
            <value>Weekly</value>
        </filters>
        <label>04-GSS WEEKLY File Subscription Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X05_Search_by_Next_Master_File_Delivery</fullName>
        <columns>NAME</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>Next_Master_File_Delivery__c</columns>
        <columns>Calendar_Next_Submission_Date__c</columns>
        <columns>Calendar_Monthly_Option__c</columns>
        <columns>Calendar_Semi_Monthly_First_Option__c</columns>
        <columns>Calendar_Weekly_Option__c</columns>
        <columns>Zuora_Subscription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_Master_File_Delivery__c</field>
            <operation>equals</operation>
            <value>5/10/2020</value>
        </filters>
        <label>05-Search by Next Master File Delivery</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X10_Search_by_File_Subscription_Details</fullName>
        <columns>NAME</columns>
        <columns>GDP_File_Description__c</columns>
        <columns>FileRecipientEmail__c</columns>
        <columns>Calendar_Semi_Monthly_First_Option__c</columns>
        <columns>Calendar_Monthly_Option__c</columns>
        <columns>Calendar_Weekly_Option__c</columns>
        <columns>Zuora_Subscription__c</columns>
        <columns>File_Name_Custom_Prefix__c</columns>
        <columns>File_Name_Custom_Suffix__c</columns>
        <columns>File_Name_Prefix_Option__c</columns>
        <columns>File_Name_Suffix_Option__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>A-S00067100</value>
        </filters>
        <label>10-Search by File Subscription Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subscription Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Subscription Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_add_value_for_prefix_suffix_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
	AND(
		ISPICKVAL(File_Name_Prefix_Option__c, &apos;Date&apos;)
		, NOT(ISBLANK(File_Name_Custom_Prefix__c))
	)
	, AND(
		ISPICKVAL(File_Name_Suffix_Option__c, &apos;Date&apos;)
		, NOT(ISBLANK(File_Name_Custom_Suffix__c))
	)
)</errorConditionFormula>
        <errorMessage>File Name Custom Prefix/Suffix must be blank if the File Name Prefix/Suffix option is set to &apos;Date&apos;</errorMessage>
    </validationRules>
</CustomObject>